--- a/src/application-frame/menu/Menu.scss
+++ b/src/application-frame/menu/Menu.scss
@@ -225,7 +225,6 @@
                 border: none;
 
                 .p-panelmenu-header-link {
-                    justify-content: space-between;
                     .p-submenu-icon {
                         order: 1;
                         margin-right: 0px;
@@ -274,6 +273,13 @@
 
 .menu-logo-mini {
     max-height: 0px;
+}
+
+.menu-collapsed.no-mini {
+    .p-panelmenu-icon.pi-chevron-right,
+    .p-panelmenu-icon.pi-chevron-down {
+        visibility: hidden;
+    }
 }
 
 /// Fadeout div for not readable text if collapsed
